# CathayOCR

./: .gitignore  README.md  dev-notes.md  fixlog-20260715-cuda.md  pro-notes.md
CathayOCR-Dev/: README.md  _cuda_check.py  软件介绍.md
CathayOCR-Dev/CathayOCR-Dev-UI/: CathayOCR Dev.bat  _rec_batch_test.py  umi_ocr_pdf_processor_ui.py  安装脚本.bat
CathayOCR-Dev/ncnn/: CMakeLists.txt  LICENSE  README.en.md  README.md  build_cpu.cmd  build_cpu_and_deploy.cmd  build_vulkan_and_deploy.cmd
CathayOCR-Dev/ncnn/src/: angle_net.cpp  angle_net.h  common.h  config.h  crnn_net.cpp  crnn_net.h  db_net.cpp  db_net.h  logging.h  main.cpp  ocr_engine.cpp  ocr_engine.h  pybind_ocr.cpp  utils.cpp  utils.h
CathayOCR-Dev/ppocr_v6/: PaddleOCR-MultiLang.bat  PaddleOCR-json.bat  README.md  __init__.py  _acc_test.py  _bench.py  _bench2.py  _cuda_test.py  _dump_target.py  install.bat  install_gpu.bat  paddleocr_config.py  paddleocr_umi.py  ppocr_pipe.py  ppocr_v5_multilang_server.py  ppocr_v6_server.py
CathayOCR-Dev/ppocr_v6/models/: configs.txt
CathayOCR-Dev/tools/: add_ppocr_full_engine.py  download_v5_onnx_models.py  fix_mapping.py
CathayOCR-Lite/: CathayOCR Lite.bat  README.md  _cuda_check.py  _import_check.py  umi_ocr_pdf_processor_ui.py  安装脚本.bat  软件介绍.md
CathayOCR-Pro/: CathayOCR Pro.bat  README.md  _check_pdf.py  _cuda_check.py  umi_ocr_pdf_processor_ui.py  安装脚本.bat  软件介绍.md
